# cpp-base-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.conan/: mac_clang_release
.github/workflows/: bump-version.yml  cmake-multi-platform-build-and-test.yml  create-release.yml
src/: .clang-tidy  CMakeLists.txt  main.cpp  version.txt
test/: CMakeLists.txt  dummy.test.cpp
